--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,10 @@ dependencies {
 tasks.withType(JavaCompile).configureEach {
     it.options.release = 21
 }
+tasks.withType(Jar).configureEach {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
 
 java {
     // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
