--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx4G
 org.gradle.parallel=true
+jvm_target=21
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 minecraft_version=1.21.1
