--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,4 @@ maven_group=team.blombix
 archives_base_name=minez-help-menu
 # Dependencies
 fabric_version=0.115.4+1.21.1
+jei_version="19.21.0.247"
