--- a/build.gradle
+++ b/build.gradle
@@ -48,9 +48,11 @@ dependencies {
 
     //JEI
     modImplementation("mezz.jei:jei-1.21.1-fabric:19.21.0.247")
+    //TODO:Zrobić połącznie z JEI
 
     //tips
     //modImplementation files("libs/tipsmod-1.21.1-21.1.2")
+    //TODO:Zrobić połącznie z Tips
 }
 
 tasks.withType(JavaCompile).configureEach {
