--- a/build.gradle
+++ b/build.gradle
@@ -14,12 +14,11 @@ base {
 
 repositories {
     maven {
-        name = "JEI"
-        url = uri("https://maven.blamejared.com/")
-    }
-    maven {
         name = "JitPack"
         url = uri("https://jitpack.io")
+    }
+    maven {
+        url = "https://api.modrinth.com/maven"
     }
 }
 
@@ -50,10 +49,6 @@ dependencies {
     // Fabric API.
     modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
     modImplementation "net.fabricmc:fabric-language-kotlin:${project.fabric_kotlin_version}"
-
-    //JEI
-    modImplementation("mezz.jei:jei-1.21.1-fabric:19.21.0.247")
-    //TODO:Zrobić połącznie z JEI
 
     //tips
     //modImplementation files("libs/tipsmod-1.21.1-21.1.2")
